@@ -1,5 +1,5 @@
 QPKG_NAME="HideThatBanner"
-QPKG_VER="230309"
+QPKG_VER="230503"
 QPKG_AUTHOR="OneCD"
 QPKG_RC_NUM="100"
 QPKG_SERVICE_PROGRAM="hidethatbanner.sh"
