@@ -1,5 +1,8 @@
+* Minor update: (230503)
+- Add 'status' action.
+
 * Minor update: (230309)
-- Ensure compatibility with qpkg_service utility.
+- Ensure compatibility with 'qpkg_service' utility.
 
 * Minor update: (230214)
 - Updated package icon.
